DevOrg/src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Department_Code__c</fullName>
        <description>This field represents the department code</description>
        <label>Department Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>This field represents the name of any department</description>
        <label>Department</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <description>This field represents the employee Id</description>
        <label>Employee ID</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <description>This field represents the salary of an employee</description>
        <label>Salary</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Look_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Look Up</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>